--- a/AR.css
+++ b/AR.css
@@ -5,10 +5,14 @@
 	padding:0;
 }
 
+body{
+     background-color:#FECE00; 
+}
+
 model-viewer{
 	width: 100%;
 	height: 640px;
-	background-color:#FECE00; 
+
 	shadow-intensity = 1
 	shadow-intensity = 0
 }
